Fixes Bottom Nav Alignment

--- a/client/src/components/BottomNav.css
+++ b/client/src/components/BottomNav.css
@@ -8,7 +8,6 @@
   width: 100%;
   font-size: 1.5em;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   z-index: 1;
 }
 .nav-item {
